--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,4 @@ reqwest = { version = "0.12.5", features = ["blocking", "json"] }
 serde = { version = "1.0.204", features = ["derive"] }
 serde_json = "1.0.122"
 serde_repr = "0.1.19"
+shellexpand = "3.1.0"
